# andeme

./: .clang-format  .gitignore  CMakeLists.txt  CmakeLists.txt  Dockerfile.ubuntu.18.04  README.md  build.bat
client/: client.cpp  client.h
common/: BioBox.cpp  BioBox.h  EvpBox.cpp  EvpBox.h  RSAKey.cpp  RSAKey.h  keygen.cpp  keygen.h  keygen.t.cpp  messagestorage.cpp  messagestorage.h  messagestorage.t.cpp  rsautil.cpp  rsautil.h  rsautil.t.cpp  setting.t.cpp  sqlite3storage.cpp  sqlite3storage.h  sqlite_util.cpp  sqlite_util.h  sqliteutil.cpp  sqliteutil.h  sqliteutil.t.cpp  test.cpp  threadsafequeue.cpp  threadsafequeue.h
docs/: build.md
qtgui/: messagemanager.h  messagemanager.l.h  qtgui.m.cpp  qtgui.ui  qtqui.m.cpp  setting.t.cpp  settingdialog.cpp  settingdialog.h  settingdialog.ui  settings.cpp  settings.h  settings.l.cpp  settings.l.h  settingutil.cpp  settingutil.h  settingwindow.cpp  settingwindow.ui
schema/: message.proto  userinfo.proto
schema/services/: messagesvc.proto
server/: main.cpp  server.cpp  server.h
